# cmake-project-template

./: .gitignore  CMakeLists.txt
cmake/in/: googletest.in
src/: CMakeLists.txt
test/: CMakeLists.txt  UnitTestMain.cpp
